NIFI-15416 Re-enabled TestNarLoader to run on Windows.