@@ -20,25 +20,23 @@ import org.apache.nifi.controller.ControllerService;
 import org.apache.nifi.processor.Processor;
 import org.apache.nifi.reporting.ReportingTask;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledOnOs;
-import org.junit.jupiter.api.condition.OS;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-@DisabledOnOs({ OS.WINDOWS })
+
 public class TestNarLoader extends AbstractTestNarLoader {
-    static final String WORK_DIR = "./target/work";
-    static final String NAR_AUTOLOAD_DIR = "./target/extensions";
+    static final String WORK_DIR = "work";
+    static final String NAR_AUTOLOAD_DIR = "extensions";
     static final String PROPERTIES_FILE = "./src/test/resources/conf/nifi.properties";
     static final String EXTENSIONS_DIR = "./src/test/resources/extensions";
 
@@ -46,12 +44,14 @@ public class TestNarLoader extends AbstractTestNarLoader {
     public void testNarLoaderWhenAllAvailable() throws IOException {
         // Copy all NARs from src/test/resources/extensions to target/extensions
         final File extensionsDir = new File(EXTENSIONS_DIR);
-        final Path narAutoLoadDir = Paths.get(NAR_AUTOLOAD_DIR);
-        for (final File extensionFile : extensionsDir.listFiles()) {
+        final Path narAutoLoadDir = tempDir.resolve(NAR_AUTOLOAD_DIR);
+        final File[] extensions = extensionsDir.listFiles();
+        assertNotNull(extensions);
+        for (final File extensionFile : extensions) {
             Files.copy(extensionFile.toPath(), narAutoLoadDir.resolve(extensionFile.getName()), StandardCopyOption.REPLACE_EXISTING);
         }
 
-        final List<File> narFiles = Arrays.asList(narAutoLoadDir.toFile().listFiles());
+        final List<File> narFiles = Arrays.asList(Objects.requireNonNull(narAutoLoadDir.toFile().listFiles()));
         assertEquals(3, narFiles.size());
 
         final NarLoadResult narLoadResult = narLoader.load(narFiles);
@@ -68,7 +68,7 @@ public class TestNarLoader extends AbstractTestNarLoader {
     @Test
     public void testNarLoaderWhenDependentNarsAreMissing() throws IOException {
         final File extensionsDir = new File(EXTENSIONS_DIR);
-        final Path narAutoLoadDir = Paths.get(NAR_AUTOLOAD_DIR);
+        final Path narAutoLoadDir = tempDir.resolve(NAR_AUTOLOAD_DIR);
 
         // Copy processors NAR first which depends on service API NAR
         final File processorsNar = new File(extensionsDir, "nifi-example-processors-nar-1.0.nar");
@@ -76,7 +76,7 @@ public class TestNarLoader extends AbstractTestNarLoader {
         Files.copy(processorsNar.toPath(), targetProcessorNar.toPath(), StandardCopyOption.REPLACE_EXISTING);
 
         // Attempt to load while only processor NAR is available
-        final List<File> narFiles1 = Arrays.asList(targetProcessorNar);
+        final List<File> narFiles1 = List.of(targetProcessorNar);
         final NarLoadResult narLoadResult1 = narLoader.load(narFiles1);
         assertNotNull(narLoadResult1);
         assertEquals(0, narLoadResult1.getLoadedBundles().size());
@@ -88,7 +88,7 @@ public class TestNarLoader extends AbstractTestNarLoader {
         Files.copy(serviceImplNar.toPath(), targetServiceImplNar.toPath(), StandardCopyOption.REPLACE_EXISTING);
 
         // Attempt to load while processor and service impl NARs available
-        final List<File> narFiles2 = Arrays.asList(targetServiceImplNar);
+        final List<File> narFiles2 = List.of(targetServiceImplNar);
         final NarLoadResult narLoadResult2 = narLoader.load(narFiles2);
         assertNotNull(narLoadResult2);
         assertEquals(0, narLoadResult2.getLoadedBundles().size());
@@ -100,7 +100,7 @@ public class TestNarLoader extends AbstractTestNarLoader {
         Files.copy(serviceApiNar.toPath(), targetServiceApiNar.toPath(), StandardCopyOption.REPLACE_EXISTING);
 
         // Attempt to load while all NARs available
-        final List<File> narFiles3 = Arrays.asList(targetServiceApiNar);
+        final List<File> narFiles3 = List.of(targetServiceApiNar);
         final NarLoadResult narLoadResult3 = narLoader.load(narFiles3);
         assertNotNull(narLoadResult3);
         assertEquals(3, narLoadResult3.getLoadedBundles().size());
